commit all website changes with a script

--- a/publications.html
+++ b/publications.html
@@ -289,9 +289,9 @@ $(document).ready(function () {
 <p>Brunner, D., Suter, I., Bernet, L., Constantin, L., Grange, S. K.,
 Rubli, P., Li, J., Chen, J., Bigi, A., and Emmenegger, L. (2025). <a
 href="https://acp.copernicus.org/articles/25/14387/2025">Building-resolving
-simulations of anthropogenic and biospheric CO2 in the city of Zurich
-with GRAMM/GRAL.</a> <em>Atmospheric Chemistry and Physics</em> 25.21,
-pp. 14387–14410.</p>
+simulations of anthropogenic and biospheric CO<sub>2</sub> in the city
+of Zurich with GRAMM/GRAL.</a> <em>Atmospheric Chemistry and
+Physics</em> 25.21, pp. 14387–14410.</p>
 <p>Jouanny, A., Upadhyay, A., Jiang, J., Vasilakos, P., Via, M., Cheng,
 Y., Flueckiger, B., Uzu, G., Jaffrezo, J.-L., Voiron, C., Favez, O.,
 Chebaicheb, H., Bourin, A., Font, A., Riffault, V., Freney, E.,
