commit all website changes with a script

--- a/publications.html
+++ b/publications.html
@@ -926,15 +926,15 @@ light-duty diesel vehicles.</a> Presented at American Geophysical Union
 (AGU) 2019 Fall Meeting, San Francisco, California, 9–13 December.
 Abstract number 488377 and final paper number A21W-2634.</p>
 <p>Grange, S. K. and Carslaw, D. C. (2019). <a
-href="https://drive.google.com/open?id=1wfqJhwEgcHW9nWkhMByjkeTDhEnQTLUd"><em>Using
+href="https://drive.google.com/open?id=1wfqJhwEgcHW9nWkhMByjkeTDhEnQTLUd">Using
 meteorological normalisation to detect changes in NO<sub>2</sub>
-emissions at London Marylebone Road.</em></a> Poster presented at the
+emissions at London Marylebone Road.</a> Poster presented at the
 Atmospheric Science Conference 2019, Birmingham, United Kingdom,
 2019-07-03.</p>
 <p>Grange, S. K. (2018). <a
-href="https://drive.google.com/open?id=1WtdfCmwPATRHeftg2qUSTeHg2D9s2Y5K"><em>Outlook
-for European roadside NO<sub>2</sub> better than thought.</em></a> Third
-year poster competition sponsored by Johnson Matthey.</p>
+href="https://drive.google.com/open?id=1WtdfCmwPATRHeftg2qUSTeHg2D9s2Y5K">Outlook
+for European roadside NO<sub>2</sub> better than thought.</a> Third year
+poster competition sponsored by Johnson Matthey.</p>
 </div>
 </div>
 </div>
