commit all website changes with a script

--- a/publications.html
+++ b/publications.html
@@ -286,6 +286,12 @@ $(document).ready(function () {
 <h1 class="tabset tabset-fade">Publication lists</h1>
 <div id="journal-articles" class="section level2">
 <h2>Journal articles</h2>
+<p>Via, M., Demšar, J., Hao, Y., Manousakas, M., Rusanen, A., Jiang, J.,
+Grange, S. K., Jaffrezo, J.-L., Dinh, V. N. T., Uzu, G., Močnik, G., and
+Daellenbach, K. R. (2025). <a
+href="https://egusphere.copernicus.org/preprints/2025/egusphere-2025-5253">Chemical
+sparsity in Bayesian receptor models for aerosol source
+apportionment.</a> <em>EGUsphere (under review)</em> 2025, pp. 1–38.</p>
 <p>Brunner, D., Suter, I., Bernet, L., Constantin, L., Grange, S. K.,
 Rubli, P., Li, J., Chen, J., Bigi, A., and Emmenegger, L. (2025). <a
 href="https://acp.copernicus.org/articles/25/14387/2025">Building-resolving
@@ -320,8 +326,8 @@ Constantin, L., Ramonet, M., David, L., Emmenegger, L., and Brunner, D.
 (2025). <a
 href="https://egusphere.copernicus.org/preprints/2025/egusphere-2025-3668/">Estimation
 of CO<sub>2</sub> fluxes in the cities of Zurich and Paris using the
-ICON-ART CTDAS inverse modelling framework.</a> <em>EGUsphere (under
-review)</em>. pp. 1–35.</p>
+ICON-ART CTDAS inverse modelling framework.</a> <em>EGUsphere
+(accepted)</em>. pp. 1–35.</p>
 <p>Creman, L., Grange, S. K., Rubli, P., Fischer, A., Brunner, D.,
 Hueglin, C., Emmenegger, L., and Bernet, L. (2025). <a
 href="https://egusphere.copernicus.org/preprints/2025/egusphere-2025-3425">The
