--- a/publications.html
+++ b/publications.html
@@ -543,6 +543,12 @@ during winter.</a> <em>Atmospheric Environment</em> 75, pp. 179–187.</p>
 </div>
 <div id="conference-papers-presentations" class="section level2">
 <h2>Conference papers &amp; presentations</h2>
+<p>Emmenegger, L., Bernet, L., Constantin, L., Christen, A., Grange, S.
+K., Hammer, S., Hörger, C., Hüglin, C., Kljun, N., Marbet, S., Molinier,
+B., Rubli, P., Sigmund, A., Stagakis, S., Stolz, P., and Brunner, D.
+(2025b). The past and the future of observation-based CO<sub>2</sub>
+emission estimates in Zurich. IG3IS Stakeholder Consultations and User
+Summit 2026, Geneva, Switzerland.</p>
 <p>Grange, S. K. (2025). <a
 href="https://drive.google.com/file/d/14x1sNvoc6EjMUcBawXLjjPzgihjlts_o/view?usp=drive_link">Leveraging
 routine atmospheric observations to illuminate emission source
