commit all website changes with a script

--- a/publications.html
+++ b/publications.html
@@ -286,6 +286,13 @@ $(document).ready(function () {
 <h1 class="tabset tabset-fade">Publication lists</h1>
 <div id="journal-articles" class="section level2">
 <h2>Journal articles</h2>
+<p>Ponomarev, N., Steiner, M., Koene, E., Rubli, P., Grange, S.,
+Constantin, L., Ramonet, M., David, L., Hamzehloo, A., Emmenegger, L.,
+and Brunner, D. (2026). <a
+href="https://acp.copernicus.org/articles/26/547/2026">Estimation of CO2
+fluxes in the cities of Zurich and Paris using the ICON-ART CTDAS
+inverse modelling framework.</a> <em>Atmospheric Chemistry and
+Physics</em> 26.1, pp. 547–570.</p>
 <p>Via, M., Demšar, J., Hao, Y., Manousakas, M., Rusanen, A., Jiang, J.,
 Grange, S. K., Jaffrezo, J.-L., Dinh, V. N. T., Uzu, G., Močnik, G., and
 Daellenbach, K. R. (2025). <a
@@ -321,13 +328,6 @@ href="https://doi.org/10.1021/acs.estlett.5c00771">Machine-Learning-Driven
 Reconstruction of Organic Aerosol Sources across Dense Monitoring
 Networks in Europe.</a> <em>Environmental Science and Technology
 Letters</em>.</p>
-<p>Ponomarev, N., Steiner, M., Koene, E., Rubli, P., Grange, S.,
-Constantin, L., Ramonet, M., David, L., Emmenegger, L., and Brunner, D.
-(2025). <a
-href="https://egusphere.copernicus.org/preprints/2025/egusphere-2025-3668/">Estimation
-of CO<sub>2</sub> fluxes in the cities of Zurich and Paris using the
-ICON-ART CTDAS inverse modelling framework.</a> <em>EGUsphere
-(accepted)</em>. pp. 1–35.</p>
 <p>Creman, L., Grange, S. K., Rubli, P., Fischer, A., Brunner, D.,
 Hueglin, C., Emmenegger, L., and Bernet, L. (2025). <a
 href="https://egusphere.copernicus.org/preprints/2025/egusphere-2025-3425">The
