commit all website changes with a script

--- a/publications.html
+++ b/publications.html
@@ -286,6 +286,12 @@ $(document).ready(function () {
 <h1 class="tabset tabset-fade">Publication lists</h1>
 <div id="journal-articles" class="section level2">
 <h2>Journal articles</h2>
+<p>Aigner, P., Chen, J., Böhm, F., Chariot, M., Emmenegger, L., Frölich,
+L., Grange, S., Kühbacher, D., Kürzinger, K., Laurent, O., Makowski, M.,
+Rubli, P., Schmitt, A., and Wenzel, A. (2026). <a
+href="https://amt.copernicus.org/articles/19/745/2026">ACROPOLIS: Munich
+urban CO2 sensor network.</a> <em>Atmospheric Measurement
+Techniques</em> 19.2, pp. 745–773.</p>
 <p>Ponomarev, N., Steiner, M., Koene, E., Rubli, P., Grange, S.,
 Constantin, L., Ramonet, M., David, L., Hamzehloo, A., Emmenegger, L.,
 and Brunner, D. (2026). <a
