commit all website changes with a script

--- a/publications.html
+++ b/publications.html
@@ -290,7 +290,7 @@ $(document).ready(function () {
 L., Grange, S., Kühbacher, D., Kürzinger, K., Laurent, O., Makowski, M.,
 Rubli, P., Schmitt, A., and Wenzel, A. (2026). <a
 href="https://amt.copernicus.org/articles/19/745/2026">ACROPOLIS: Munich
-urban CO2 sensor network.</a> <em>Atmospheric Measurement
+urban CO<sub>2</sub> sensor network.</a> <em>Atmospheric Measurement
 Techniques</em> 19.2, pp. 745–773.</p>
 <p>Ponomarev, N., Steiner, M., Koene, E., Rubli, P., Grange, S.,
 Constantin, L., Ramonet, M., David, L., Hamzehloo, A., Emmenegger, L.,
