commit all website changes with a script

--- a/publications.html
+++ b/publications.html
@@ -286,6 +286,14 @@ $(document).ready(function () {
 <h1 class="tabset tabset-fade">Publication lists</h1>
 <div id="journal-articles" class="section level2">
 <h2>Journal articles</h2>
+<p>Schneider-Beltran, K. S., Cui, T., Casotto, R., Lamkaddam, H.,
+Tobler, A., Hao, Y., Khare, P., Manousakas, M., Dada, L., Grange, S. K.,
+Hüglin, C., Uzu, G., Jaffrezo, J.-L., Rausch, J., Jaramillo-Vogel, D.,
+Mohr, C., El-Haddad, I., Slowik, J. G., Prévôt, A. S. H., and
+Daellenbach, K. R. (2026). <a
+href="https://doi.org/10.3390/atmos17020199">Characterization of Coarse
+Organic Particulate Matter in Urban and Rural Switzerland Using Advanced
+Offline Mass Spectrometry.</a> <em>Atmosphere</em> 17.199, pp. 1–32.</p>
 <p>Aigner, P., Chen, J., Böhm, F., Chariot, M., Emmenegger, L., Frölich,
 L., Grange, S., Kühbacher, D., Kürzinger, K., Laurent, O., Makowski, M.,
 Rubli, P., Schmitt, A., and Wenzel, A. (2026). <a
